--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,9 +1,14 @@
 @tailwind base;
 @tailwind components;
+@tailwind utilities;
 
-html.dark {
+@layer base {
+  html {
+    -webkit-tap-highlight-color: transparent;
+  }
+
+  html.dark {
   @apply bg-gray-900;
   color-scheme: dark;
 }
-
-@tailwind utilities;
+}
