--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,5 @@
 @import './markdown.css';
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 #nprogress {
   pointer-events: none;
@@ -13,4 +14,9 @@
   left: 0;
   width: 100%;
   height: 2px;
+}
+
+body {
+  font-family: 'Nunito', sans-serif;
+
 }
