--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,12 +1,12 @@
-@import './markdown.css';
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import "./markdown.css";
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
 
 #nprogress {
   pointer-events: none;
 }
 
 #nprogress .bar {
-  background: rgb(63,131,248);
+  background: rgb(63, 131, 248);
   opacity: 0.75;
   position: fixed;
   z-index: 1031;
@@ -17,6 +17,5 @@
 }
 
 body {
-  font-family: 'Nunito', sans-serif;
-
+  font-family: "Nunito", sans-serif;
 }
